; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_xpt2046.c_xpt2046_getPositionAvg.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_xpt2046.c_xpt2046_getPositionAvg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @xpt2046_getPositionAvg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xpt2046_getPositionAvg(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %11 = call i32 @getPosition(i32* %3, i32* %4)
  %12 = call i32 @getPosition(i32* %5, i32* %6)
  %13 = call i32 @getPosition(i32* %7, i32* %8)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @besttwoavg(i32 %14, i32 %15, i32 %16)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @besttwoavg(i32 %18, i32 %19, i32 %20)
  store i32 %21, i32* %10, align 4
  %22 = load i32*, i32** %2, align 8
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @lua_pushinteger(i32* %22, i32 %23)
  %25 = load i32*, i32** %2, align 8
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @lua_pushinteger(i32* %25, i32 %26)
  ret i32 2
}

declare dso_local i32 @getPosition(i32*, i32*) #1

declare dso_local i32 @besttwoavg(i32, i32, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
